fix random 1